--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -3,3 +3,6 @@ $primary-color: #007bff;
 $danger-color: #dc3545;
 $success-color: #28a745;
 $light-bg: #f8f9fa;
+$dark-color: #2c3e50;
+$light-color: #ecf0f1;
+$error-color: #e74c3c;
