--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -1,3 +1,12 @@
 @use "abstracts/mixins";
 @use "abstracts/functions";
 @use "abstracts/variables";
+
+@font-face {
+  font-family: "Montserrat";
+  src: url(/assets/font/Montserrat-Bold.ttf);
+}
+@font-face {
+  font-family: "Montserrat-Bold";
+  src: url(/assets/font/Montserrat-Bold.ttf);
+}
