--- a/assets/css/components/index.scss
+++ b/assets/css/components/index.scss
@@ -1,3 +1,4 @@
 @use "layout/header";
-@use "sections/home-section";
+@use "sections/todo-list-page";
+@use "sections/login-page";
 @use "layout/footer";
