--- a/assets/css/components/sections/_login-page.scss
+++ b/assets/css/components/sections/_login-page.scss
@@ -68,4 +68,19 @@
       }
     }
   }
+  p {
+    margin-top: 15px;
+    color: #2c3e50;
+
+    .registration-link {
+      color: #007bff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s all ease;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
