--- a/assets/css/components/sections/_todo-list-page.scss
+++ b/assets/css/components/sections/_todo-list-page.scss
@@ -2,16 +2,33 @@
 @use "abstracts/functions";
 @use "abstracts/variables";
 
-.container {
+.todo-list-wrapper {
+  font-family: "Montserrat";
   background-color: #add8e6;
   padding: 20px;
   border-radius: 25px;
+  width: 80%;
+  margin: 25px auto;
   .main-heading {
-    font-size: 34px;
+    font-family: "Montserrat-Bold";
+    font-size: functions.rem(34);
     font-weight: 900;
     color: #fff;
     margin-bottom: 20px;
     pointer-events: none;
+  }
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: variables.$light-color;
+  box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.2);
+  .welcome-text {
+    font-family: "Montserrat-Bold";
+    font-size: 34px;
+    color: variables.$dark-color;
+    font-weight: 900;
   }
 }
 #taskList {
@@ -23,21 +40,27 @@
     border-radius: 10px;
     margin-bottom: 5px;
     padding: 10px 15px;
-    .checkbox-with-task-text {
+    .task-text {
+      font-size: functions.rem(18);
+      pointer-events: none;
+    }
+    .checkbox-with-delete-btn {
       display: flex;
       align-items: center;
       gap: 10px;
       .status-checkbox {
         cursor: pointer;
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
         &:checked {
           accent-color: variables.$success-color;
         }
       }
-      .task-text {
-        font-size: functions.rem(18);
-        pointer-events: none;
+      .delete-btn {
+        background-color: variables.$danger-color;
+        border-radius: 5px;
+        cursor: pointer;
+        padding: 6px;
       }
     }
   }
@@ -48,7 +71,15 @@ button {
   &.btn-primary {
     background-color: variables.$primary-color;
   }
-  &.btn-danger {
-    background-color: variables.$danger-color;
+}
+
+@include mixins.responsive("sm-devices") {
+  .todo-list-wrapper {
+    width: 90%;
+  }
+  .header {
+    .welcome-text {
+      font-size: functions.rem(22);
+    }
   }
 }
